Set laz as default start example

--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "dvvr",
   "version": "0.0.1",
   "license": "MIT",
-  "scripts": {
-    "start": "webpack-dev-server --progress --hot --open",
-    "start-local": "webpack-dev-server --env.local --progress --hot --open",
+  "scripts": {        
 	"laz": "cd point-cloud-laz && webpack-dev-server --progress --hot --open",
 	"ply": "cd point-cloud-ply && webpack-dev-server --progress --hot --open",
 	"laz-install": "cd point-cloud-laz && npm install && cd ..",
-	"ply-install": "cd point-cloud-ply && npm install && cd .."
+	"ply-install": "cd point-cloud-ply && npm install && cd ..",
+	"start": "npm run laz-install && npm run laz",
   }
 }
