--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
 	"ply": "cd point-cloud-ply && webpack-dev-server --progress --hot --open",
 	"laz-install": "cd point-cloud-laz && npm install && cd ..",
 	"ply-install": "cd point-cloud-ply && npm install && cd ..",
-	"start": "npm run laz-install && npm run laz",
+	"start": "npm run laz-install && npm run laz"
   }
 }
