--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {        
-	"laz": "cd point-cloud-laz && webpack-dev-server --progress --hot --open",
-	"ply": "cd point-cloud-ply && webpack-dev-server --progress --hot --open",
+	"laz": "cd point-cloud-laz && ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --hot --open",
+	"ply": "cd point-cloud-ply && ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --hot --open",
 	"laz-install": "cd point-cloud-laz && npm install && cd ..",
 	"ply-install": "cd point-cloud-ply && npm install && cd ..",
 	"start": "npm run laz-install && npm run laz"
